--- a/views/index.html
+++ b/views/index.html
@@ -14,5 +14,5 @@
          <h3>Part 1 of Free Code Camp Backend Challenges</h3>
       </div>
    </body>
-  <script src = "./app1.js"></script>
+  <script src = "/scripts/app1.js"></script>
 </html>
