--- a/src/views/dateView.ejs
+++ b/src/views/dateView.ejs
@@ -12,6 +12,9 @@
       <div class="container">
          <h1>Manage Node.js projects and npm packages using package.json</h1>
          <h3>Part 1 of Free Code Camp Backend Challenges</h3>
+           <div class = "jumbo">
+             <pre><%=jsonObj%></pre>
+           </div>
       </div>
    </body>
 </html>
